// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigation mapping > matches snapshot for sidebar contexts 1`] = `
[
  {
    "depth": 0,
    "i18nKey": "navigation.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "order": 5,
    "parent": undefined,
    "path": "/dashboard",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "badge": {
      "source": "reports",
      "type": "dot",
    },
    "depth": 0,
    "i18nKey": "navigation.reports",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "reports",
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.control_center",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.controlCenter",
        "order": 5,
        "parent": [Circular],
        "path": "/control-center",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
        "visibility": {
          "roles": [
            "admin",
            "manager",
            "staff",
          ],
        },
      },
      {
        "depth": 1,
        "i18nKey": "navigation.elections",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.elections",
        "order": 10,
        "parent": [Circular],
        "path": "/elections",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.geo_areas",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.geoAreas",
        "order": 20,
        "parent": [Circular],
        "path": "/geo-areas",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "breadcrumb": {
          "i18nKey": "navigation.zones_mansoura",
        },
        "depth": 1,
        "i18nKey": "navigation.zones_mansoura",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.zones",
        "order": 30,
        "parent": [Circular],
        "path": "/zones/mansoura",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.committees",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.committees",
        "order": 40,
        "parent": [Circular],
        "path": "/committees",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.voters",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.voters",
        "order": 50,
        "parent": [Circular],
        "path": "/voters",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.candidates",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.candidates",
        "order": 60,
        "parent": [Circular],
        "path": "/candidates",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_election_operations",
    "id": "operations",
    "meta": {
      "variant": "section",
    },
    "order": 20,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_field_resources",
    "id": "field",
    "meta": {
      "variant": "section",
    },
    "order": 30,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.campaigns",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.campaigns",
        "order": 10,
        "parent": [Circular],
        "path": "/campaigns",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_campaign_intelligence",
    "id": "campaign",
    "meta": {
      "variant": "section",
    },
    "order": 40,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.settings",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "admin.settings",
        "order": 10,
        "parent": [Circular],
        "path": "/settings",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
        "visibility": {
          "roles": [
            "admin",
          ],
        },
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_admin",
    "id": "admin",
    "meta": {
      "variant": "section",
    },
    "order": 100,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
]
`;

exports[`navigation mapping > matches snapshot for sidebar contexts 2`] = `
[
  {
    "depth": 0,
    "i18nKey": "navigation.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "order": 5,
    "parent": undefined,
    "path": "/dashboard",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "badge": {
      "source": "reports",
      "type": "dot",
    },
    "depth": 0,
    "i18nKey": "navigation.reports",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "reports",
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.control_center",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.controlCenter",
        "order": 5,
        "parent": [Circular],
        "path": "/control-center",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
        "visibility": {
          "roles": [
            "admin",
            "manager",
            "staff",
          ],
        },
      },
      {
        "depth": 1,
        "i18nKey": "navigation.elections",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.elections",
        "order": 10,
        "parent": [Circular],
        "path": "/elections",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.geo_areas",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.geoAreas",
        "order": 20,
        "parent": [Circular],
        "path": "/geo-areas",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "breadcrumb": {
          "i18nKey": "navigation.zones_mansoura",
        },
        "depth": 1,
        "i18nKey": "navigation.zones_mansoura",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.zones",
        "order": 30,
        "parent": [Circular],
        "path": "/zones/mansoura",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.committees",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.committees",
        "order": 40,
        "parent": [Circular],
        "path": "/committees",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.voters",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.voters",
        "order": 50,
        "parent": [Circular],
        "path": "/voters",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.candidates",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.candidates",
        "order": 60,
        "parent": [Circular],
        "path": "/candidates",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_election_operations",
    "id": "operations",
    "meta": {
      "variant": "section",
    },
    "order": 20,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_field_resources",
    "id": "field",
    "meta": {
      "variant": "section",
    },
    "order": 30,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.campaigns",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.campaigns",
        "order": 10,
        "parent": [Circular],
        "path": "/campaigns",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_campaign_intelligence",
    "id": "campaign",
    "meta": {
      "variant": "section",
    },
    "order": 40,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "depth": 0,
    "i18nKey": "navigation.section_admin",
    "id": "admin",
    "meta": {
      "variant": "section",
    },
    "order": 100,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
]
`;

exports[`navigation mapping > matches snapshot for sidebar contexts 3`] = `
[
  {
    "depth": 0,
    "i18nKey": "navigation.dashboard",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "dashboard",
    "order": 5,
    "parent": undefined,
    "path": "/dashboard",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "badge": {
      "source": "reports",
      "type": "dot",
    },
    "depth": 0,
    "i18nKey": "navigation.reports",
    "icon": {
      "$$typeof": Symbol(react.forward_ref),
      "render": [Function],
    },
    "id": "reports",
    "order": 10,
    "parent": undefined,
    "path": "/reports",
    "surfaces": [
      "sidebar",
      "top",
      "breadcrumb",
    ],
    "visibility": {
      "roles": [
        "admin",
        "manager",
        "staff",
      ],
    },
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.control_center",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.controlCenter",
        "order": 5,
        "parent": [Circular],
        "path": "/control-center",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
        "visibility": {
          "roles": [
            "admin",
            "manager",
            "staff",
          ],
        },
      },
      {
        "depth": 1,
        "i18nKey": "navigation.elections",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.elections",
        "order": 10,
        "parent": [Circular],
        "path": "/elections",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.geo_areas",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.geoAreas",
        "order": 20,
        "parent": [Circular],
        "path": "/geo-areas",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "breadcrumb": {
          "i18nKey": "navigation.zones_mansoura",
        },
        "depth": 1,
        "i18nKey": "navigation.zones_mansoura",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.zones",
        "order": 30,
        "parent": [Circular],
        "path": "/zones/mansoura",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.committees",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.committees",
        "order": 40,
        "parent": [Circular],
        "path": "/committees",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.voters",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.voters",
        "order": 50,
        "parent": [Circular],
        "path": "/voters",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.candidates",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "operations.candidates",
        "order": 60,
        "parent": [Circular],
        "path": "/candidates",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_election_operations",
    "id": "operations",
    "meta": {
      "variant": "section",
    },
    "order": 20,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.agents",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.agents",
        "order": 10,
        "parent": [Circular],
        "path": "/agents",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "volunteers",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.volunteers",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.volunteers",
        "order": 20,
        "parent": [Circular],
        "path": "/volunteers",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "badge": {
          "source": "alerts",
          "type": "count",
        },
        "depth": 1,
        "i18nKey": "navigation.observations",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "field.observations",
        "order": 30,
        "parent": [Circular],
        "path": "/observations",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_field_resources",
    "id": "field",
    "meta": {
      "variant": "section",
    },
    "order": 30,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "children": [
      {
        "depth": 1,
        "i18nKey": "navigation.campaigns",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.campaigns",
        "order": 10,
        "parent": [Circular],
        "path": "/campaigns",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
      {
        "depth": 1,
        "i18nKey": "navigation.automation",
        "icon": {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
        "id": "campaign.automation",
        "order": 20,
        "parent": [Circular],
        "path": "/automation",
        "surfaces": [
          "sidebar",
          "breadcrumb",
        ],
      },
    ],
    "depth": 0,
    "i18nKey": "navigation.section_campaign_intelligence",
    "id": "campaign",
    "meta": {
      "variant": "section",
    },
    "order": 40,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
  {
    "breadcrumb": {
      "hide": true,
    },
    "depth": 0,
    "i18nKey": "navigation.section_admin",
    "id": "admin",
    "meta": {
      "variant": "section",
    },
    "order": 100,
    "parent": undefined,
    "surfaces": [
      "sidebar",
    ],
  },
]
`;
